--- a/Alice_Kaggle/Alice Time Feature EDA.ipynb
+++ b/Alice_Kaggle/Alice Time Feature EDA.ipynb
@@ -2,23 +2,303 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd \n",
+    "import numpy as np \n",
+    "import scipy "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df = pd.read_csv('train_sessions.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data cleaning and manipulation\n",
+    "sites = ['site%d' %i for i in range(1,11)]\n",
+    "times = ['time%d' %i for i in range(1,11)]\n",
+    "\n",
+    "# NaN values\n",
+    "train_df[sites] = train_df[sites].fillna(0)\n",
+    "train_df[sites] = train_df[sites].astype(int)\n",
+    "\n",
+    "train_df[times] = train_df[times].fillna(0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'Alice_Model'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-47d82940ab1d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mAlice_Model\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mipynb\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[1;33m*\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'Alice_Model'"
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>session_id</th>\n",
+       "      <th>site1</th>\n",
+       "      <th>time1</th>\n",
+       "      <th>site2</th>\n",
+       "      <th>time2</th>\n",
+       "      <th>site3</th>\n",
+       "      <th>time3</th>\n",
+       "      <th>site4</th>\n",
+       "      <th>time4</th>\n",
+       "      <th>site5</th>\n",
+       "      <th>...</th>\n",
+       "      <th>time6</th>\n",
+       "      <th>site7</th>\n",
+       "      <th>time7</th>\n",
+       "      <th>site8</th>\n",
+       "      <th>time8</th>\n",
+       "      <th>site9</th>\n",
+       "      <th>time9</th>\n",
+       "      <th>site10</th>\n",
+       "      <th>time10</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>718</td>\n",
+       "      <td>2014-02-20 10:02:45</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>890</td>\n",
+       "      <td>2014-02-22 11:19:50</td>\n",
+       "      <td>941</td>\n",
+       "      <td>2014-02-22 11:19:50</td>\n",
+       "      <td>3847</td>\n",
+       "      <td>2014-02-22 11:19:51</td>\n",
+       "      <td>941</td>\n",
+       "      <td>2014-02-22 11:19:51</td>\n",
+       "      <td>942</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2014-02-22 11:19:51</td>\n",
+       "      <td>3847</td>\n",
+       "      <td>2014-02-22 11:19:52</td>\n",
+       "      <td>3846</td>\n",
+       "      <td>2014-02-22 11:19:52</td>\n",
+       "      <td>1516</td>\n",
+       "      <td>2014-02-22 11:20:15</td>\n",
+       "      <td>1518</td>\n",
+       "      <td>2014-02-22 11:20:16</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>14769</td>\n",
+       "      <td>2013-12-16 16:40:17</td>\n",
+       "      <td>39</td>\n",
+       "      <td>2013-12-16 16:40:18</td>\n",
+       "      <td>14768</td>\n",
+       "      <td>2013-12-16 16:40:19</td>\n",
+       "      <td>14769</td>\n",
+       "      <td>2013-12-16 16:40:19</td>\n",
+       "      <td>37</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2013-12-16 16:40:19</td>\n",
+       "      <td>14768</td>\n",
+       "      <td>2013-12-16 16:40:20</td>\n",
+       "      <td>14768</td>\n",
+       "      <td>2013-12-16 16:40:21</td>\n",
+       "      <td>14768</td>\n",
+       "      <td>2013-12-16 16:40:22</td>\n",
+       "      <td>14768</td>\n",
+       "      <td>2013-12-16 16:40:24</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>782</td>\n",
+       "      <td>2014-03-28 10:52:12</td>\n",
+       "      <td>782</td>\n",
+       "      <td>2014-03-28 10:52:42</td>\n",
+       "      <td>782</td>\n",
+       "      <td>2014-03-28 10:53:12</td>\n",
+       "      <td>782</td>\n",
+       "      <td>2014-03-28 10:53:42</td>\n",
+       "      <td>782</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2014-03-28 10:54:42</td>\n",
+       "      <td>782</td>\n",
+       "      <td>2014-03-28 10:55:12</td>\n",
+       "      <td>782</td>\n",
+       "      <td>2014-03-28 10:55:42</td>\n",
+       "      <td>782</td>\n",
+       "      <td>2014-03-28 10:56:12</td>\n",
+       "      <td>782</td>\n",
+       "      <td>2014-03-28 10:56:42</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>22</td>\n",
+       "      <td>2014-02-28 10:53:05</td>\n",
+       "      <td>177</td>\n",
+       "      <td>2014-02-28 10:55:22</td>\n",
+       "      <td>175</td>\n",
+       "      <td>2014-02-28 10:55:22</td>\n",
+       "      <td>178</td>\n",
+       "      <td>2014-02-28 10:55:23</td>\n",
+       "      <td>177</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2014-02-28 10:55:59</td>\n",
+       "      <td>175</td>\n",
+       "      <td>2014-02-28 10:55:59</td>\n",
+       "      <td>177</td>\n",
+       "      <td>2014-02-28 10:55:59</td>\n",
+       "      <td>177</td>\n",
+       "      <td>2014-02-28 10:57:06</td>\n",
+       "      <td>178</td>\n",
+       "      <td>2014-02-28 10:57:11</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   session_id  site1                time1  site2                time2  site3  \\\n",
+       "0           1    718  2014-02-20 10:02:45      0                    0      0   \n",
+       "1           2    890  2014-02-22 11:19:50    941  2014-02-22 11:19:50   3847   \n",
+       "2           3  14769  2013-12-16 16:40:17     39  2013-12-16 16:40:18  14768   \n",
+       "3           4    782  2014-03-28 10:52:12    782  2014-03-28 10:52:42    782   \n",
+       "4           5     22  2014-02-28 10:53:05    177  2014-02-28 10:55:22    175   \n",
+       "\n",
+       "                 time3  site4                time4  site5   ...    \\\n",
+       "0                    0      0                    0      0   ...     \n",
+       "1  2014-02-22 11:19:51    941  2014-02-22 11:19:51    942   ...     \n",
+       "2  2013-12-16 16:40:19  14769  2013-12-16 16:40:19     37   ...     \n",
+       "3  2014-03-28 10:53:12    782  2014-03-28 10:53:42    782   ...     \n",
+       "4  2014-02-28 10:55:22    178  2014-02-28 10:55:23    177   ...     \n",
+       "\n",
+       "                 time6  site7                time7  site8  \\\n",
+       "0                    0      0                    0      0   \n",
+       "1  2014-02-22 11:19:51   3847  2014-02-22 11:19:52   3846   \n",
+       "2  2013-12-16 16:40:19  14768  2013-12-16 16:40:20  14768   \n",
+       "3  2014-03-28 10:54:42    782  2014-03-28 10:55:12    782   \n",
+       "4  2014-02-28 10:55:59    175  2014-02-28 10:55:59    177   \n",
+       "\n",
+       "                 time8  site9                time9  site10  \\\n",
+       "0                    0      0                    0       0   \n",
+       "1  2014-02-22 11:19:52   1516  2014-02-22 11:20:15    1518   \n",
+       "2  2013-12-16 16:40:21  14768  2013-12-16 16:40:22   14768   \n",
+       "3  2014-03-28 10:55:42    782  2014-03-28 10:56:12     782   \n",
+       "4  2014-02-28 10:55:59    177  2014-02-28 10:57:06     178   \n",
+       "\n",
+       "                time10  target  \n",
+       "0                    0       0  \n",
+       "1  2014-02-22 11:20:16       0  \n",
+       "2  2013-12-16 16:40:24       0  \n",
+       "3  2014-03-28 10:56:42       0  \n",
+       "4  2014-02-28 10:57:11       0  \n",
+       "\n",
+       "[5 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 253561 entries, 0 to 253560\n",
+      "Data columns (total 22 columns):\n",
+      "session_id    253561 non-null int64\n",
+      "site1         253561 non-null int64\n",
+      "time1         253561 non-null object\n",
+      "site2         250098 non-null float64\n",
+      "time2         250098 non-null object\n",
+      "site3         246919 non-null float64\n",
+      "time3         246919 non-null object\n",
+      "site4         244321 non-null float64\n",
+      "time4         244321 non-null object\n",
+      "site5         241829 non-null float64\n",
+      "time5         241829 non-null object\n",
+      "site6         239495 non-null float64\n",
+      "time6         239495 non-null object\n",
+      "site7         237297 non-null float64\n",
+      "time7         237297 non-null object\n",
+      "site8         235224 non-null float64\n",
+      "time8         235224 non-null object\n",
+      "site9         233084 non-null float64\n",
+      "time9         233084 non-null object\n",
+      "site10        231052 non-null float64\n",
+      "time10        231052 non-null object\n",
+      "target        253561 non-null int64\n",
+      "dtypes: float64(9), int64(3), object(10)\n",
+      "memory usage: 42.6+ MB\n"
      ]
     }
    ],
    "source": [
-    "import "
+    "train_df.info()"
    ]
   },
   {
