--- a/Alice_Kaggle/Alice_Model.ipynb
+++ b/Alice_Kaggle/Alice_Model.ipynb
@@ -584,7 +584,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x18340ddcdd8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2598a3be978>"
       ]
      },
      "execution_count": 6,
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1347,7 +1347,7 @@
        "4  start_hour_rescale  7.045650"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1358,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1822,7 +1822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1883,7 +1883,7 @@
        "3    night  0.000000"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1894,7 +1894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -1930,7 +1930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2401,7 +2401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2419,7 +2419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2456,7 +2456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2466,7 +2466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2928,7 +2928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -3013,7 +3013,7 @@
        "7          month  0.172442"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3024,7 +3024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -3034,7 +3034,7 @@
        "        True])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3052,14 +3052,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "xgb = XGBClassifier(seed=17)\n",
-    "\n",
-    "cv_xgb = cross_val_score(xgb, new_train_addYMD, y_train,cv=5, n_jobs=-17)\n",
-    "print(cv_xgb)"
+    "xgb = XGBClassifier(learning_rate=0.05, n_estimators=200, max_depth=4, gamma=0.2,objective='binary:logistic',\n",
+    "                    nthread=4,seed=17)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+       "       colsample_bynode=1, colsample_bytree=1, gamma=0.2,\n",
+       "       learning_rate=0.05, max_delta_step=0, max_depth=4,\n",
+       "       min_child_weight=1, missing=None, n_estimators=200, n_jobs=1,\n",
+       "       nthread=4, objective='binary:logistic', random_state=0, reg_alpha=0,\n",
+       "       reg_lambda=1, scale_pos_weight=1, seed=17, silent=None, subsample=1,\n",
+       "       verbosity=1)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xgb.fit(new_train_addYMD,y_train,eval_metric='auc')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_pred = xgb.predict_proba(new_test_addYMD)[:,-1]\n",
+    "write_to_submission_file(test_pred, out_file='submission_xgb.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.00028554, 0.00016251, 0.00201537, ..., 0.00023464, 0.00025884,\n",
+       "       0.00026675], dtype=float32)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_pred"
    ]
   },
   {
@@ -3079,7 +3134,6 @@
     "train_weekday_feat = train_times['time1'].apply(lambda ts: ts.weekday()).values.reshape(-1,1)\n",
     "train_yearmonth_feat = (train_times['time1'].apply(lambda ts: ts.year*100+ts.month)/1e5).values.reshape(-1,1)\n",
     "train_month_feat = train_times['time1'].apply(lambda ts: ts.month).values.reshape(-1,1)\n",
-    "\n",
     "\n",
     "test_weekday_feat = test_times['time1'].apply(lambda ts: ts.weekday()).values.reshape(-1,1)\n",
     "test_yearmonth_feat = (test_times['time1'].apply(lambda ts: ts.year*100+ts.month)/1e5).values.reshape(-1,1)\n",
