--- a/CART/CART_Implementation.ipynb
+++ b/CART/CART_Implementation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict(tree, x):\n",
+    "    \n",
+    "    cart_mdl = tree\n",
+    "    # x is a sample in dataset\n",
+    "    while isinstance(cart_mdl, dict):\n",
+    "        threshold = cart_mdl['value']\n",
+    "        index = cart_mdl['index']\n",
+    "        \n",
+    "        if x[index]<threshold:\n",
+    "            cart_mdl = cart_mdl['left']\n",
+    "        else:\n",
+    "            cart_mdl = cart_mdl['right']\n",
+    "        \n",
+    "    pred_x = cart_mdl\n",
+    "    return pred_x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -150,29 +173,26 @@
      "text": [
       "Split X0 < 6.642 - score: 0.000\n",
       "Split X0 < 2.771 - score: 0.000\n",
-      "Split X0 < 2.771 - score: 0.000\n",
-      "Split X0 < 7.498 - score: 0.000\n",
-      "Split X0 < 7.445 - score: 0.000\n",
       "Split X0 < 7.498 - score: 0.000\n"
      ]
     }
    ],
    "source": [
-    "root = fit(dataset,3,1)"
+    "root = fit(dataset,2,1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x225c3e76630>"
+       "<matplotlib.collections.PathCollection at 0x1b16c287be0>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -200,48 +220,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'index': 0,\n",
-       " 'value': 2.771244718,\n",
-       " 'left': 0,\n",
-       " 'right': {'index': 0, 'value': 2.771244718, 'left': 0, 'right': 0}}"
+       "array([7.49754587, 3.16295355, 1.        ])"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "root['left']\n"
+    "\n",
+    "data[5,:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'index': 0,\n",
-       " 'value': 7.497545867,\n",
-       " 'left': {'index': 0, 'value': 7.444542326, 'left': 1, 'right': 1},\n",
-       " 'right': {'index': 0, 'value': 7.497545867, 'left': 1, 'right': 1}}"
+       "0"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "root['right']"
+    "root2['left']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'index': 0, 'value': 6.642287351, 'left': {'index': 0, 'value': 2.771244718, 'left': 0, 'right': 0}, 'right': {'index': 0, 'value': 7.497545867, 'left': 1, 'right': 1}}\n",
+      "{'index': 0, 'value': 2.771244718, 'left': 0, 'right': 0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "while isinstance(root2,dict):\n",
+    "    print(root2)\n",
+    "    root2 = root2['left']\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    "
    ]
   },
   {
